kube/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bot-wpp
spec:
  selector:
    matchLabels:
      app: bot-wpp
  template:
    metadata:
      labels:
        app: bot-wpp
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080" 
        prometheus.io/path: "/metrics"
    spec:
      containers:
        - name: bot-wpp
          image: bot-wpp
          resources:
            limits:
              memory: '128Mi'
              cpu: '500m'
          ports:
            - name: api-port
              containerPort: 8080
