kube/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api-denjihost
  name: api-denjihost
spec:
  selector:
    app: api-denjihost
  ports:
    - name: api-denjihost-service-port
      port: 80
      targetPort: api-port
  type: LoadBalancer
